# elephant-editor

./: .gitignore  README.md  abc.files  abc.includes
.qtc_clangd/: compile_commands.json
Latex-editor/: .gitignore  Authorization.cpp  Authorization.h  Authorization.ui  CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  CreateDocument.cpp  CreateDocument.h  CreateDocument.ui  FindWidget.cpp  FindWidget.h  FramedText.cpp  FramedText.h  ImageInsert.cpp  ImageInsert.h  ImageWidget.cpp  ImageWidget.h  Latex-editor_en_US.ts  LatexCompleter.cpp  LatexCompleter.h  LineNumberArea.cpp  LineNumberArea.h  MathButtons.cpp  MathButtons.h  SelectDocument.cpp  SelectDocument.h  Server.cpp  Server.h  ShowInfoWidget.cpp  ShowInfoWidget.h  SignUp.cpp  SyntaxHighlighter.cpp  SyntaxHighlighter.h  SyntaxStyle.cpp  SyntaxStyle.h  TableWidget.cpp  TableWidget.h  cppcheck-suppressions.txt  main.cpp  (+3 more)
Latex-editor/elephant-editor/: Latex-editor_en_US.ts
Latex-editor/include/: Authorization.h  FramedText.h  ImageWidget.h  LatexCompleter.h  Server.h  SignUp.h  SyntaxHighlighter.h  TableWidget.h  mainwindow.h
Latex-editor/resources/: blank.tex  codeeditor_resources.qrc  cpp.tex  (+2 more)
Latex-editor/server/: CMakeLists.txt
Latex-editor/server/include/: data_base.h
Latex-editor/server/src/: data_base.cpp  server.cpp
build-Latex-editor-Desktop-Debug/: CMakeCache.txt.prev
build-Latex-editor-Desktop-Profile/: CMakeCache.txt  Latex-editor  Makefile  cmake_install.cmake  test
build-Latex-editor-Desktop-Release/: CMakeCache.txt  Latex-editor  Makefile  cmake_install.cmake  qtcsettings.cmake
(+272 files in other folders)
